[project]
name = "empty-trash"
version = "0.2.3"
description = "Simple Jupyter extension to show the size of the trash folder, and a button the empty it."
readme = "README.md"
license = "BSD"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
authors = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"}
]
maintainers = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"}
]

[project.urls]
repository="https://github.com/edina/nb_empty_trash"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
